Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    ELEVATE
    ELSE
    FEND
    FLOAT
    PERCENT
    PROCEDURE
    QUOTE
    SLASH
    SPACE
    STR
    WHILE

Grammar

Rule 0     S' -> program
Rule 1     program -> MAIN block END SEMICOLON blocklist
Rule 2     block -> variableDec statement statementList
Rule 3     blocklist -> MAIN SEMICOLON statementList END SEMICOLON
Rule 4     blocklist -> empty
Rule 5     statementList -> statementList1 statementList2
Rule 6     statementList -> empty
Rule 7     variableDec -> variableType ID NUMBER initiateVar SEMICOLON
Rule 8     variableDec -> empty
Rule 9     initiateVar -> ASSIGN value
Rule 10    initiateVar -> empty
Rule 11    arrayStruct -> SLPAREN NUMBER SRPAREN
Rule 12    arrayStruct -> empty
Rule 13    variableType -> INT
Rule 14    variableType -> TEXTO LPAREN NUMBER RPAREN
Rule 15    variableType -> empty
Rule 16    value -> NUMBER
Rule 17    value -> STRING
Rule 18    statement -> BALLOON LPAREN numberType COLON numberType RPAREN SEMICOLON
Rule 19    statement -> DOW LPAREN numberType RPAREN statement ENDDO SEMICOLON
Rule 20    statement -> RANDOM LPAREN arrayType COLON numberType COLON numberType RPAREN SEMICOLON
Rule 21    statement -> IF LPAREN condition RPAREN SEMICOLON statement ENDIF SEMICOLON
Rule 22    statement -> INC LPAREN numberType COLON numberType RPAREN SEMICOLON
Rule 23    statement -> DEC LPAREN numberType COLON numberType RPAREN SEMICOLON
Rule 24    statement -> FOR numberType TIMES USING arrayType randomInFor block FOREND SEMICOLON
Rule 25    statement -> FORASIGNWORD LPAREN numberType COLON numberType RPAREN DO ASIGNWORD LPAREN numberType COLON arrayType RPAREN SEMICOLON
Rule 26    statement -> TELAARANA LPAREN numberType COLON numberType RPAREN SEMICOLON
Rule 27    statement -> OBJECT LPAREN numberType COLON numberType COLON numberType RPAREN SEMICOLON
Rule 28    statement -> empty
Rule 29    statementList1 -> block statement
Rule 30    statementList2 -> block variableDec
Rule 31    randomInFor -> RANDOM LPAREN numberType COLON numberType RPAREN SEMICOLON
Rule 32    condition -> expression relation expression
Rule 33    relation -> ASSIGN
Rule 34    relation -> NE
Rule 35    relation -> LESS
Rule 36    relation -> GREATER
Rule 37    relation -> EQLESS
Rule 38    relation -> EQGREATER
Rule 39    relation -> EQUAL
Rule 40    expression -> term
Rule 41    expression -> addingOperator term
Rule 42    expression -> expression addingOperator term
Rule 43    addingOperator -> PLUS
Rule 44    addingOperator -> MINUS
Rule 45    term -> factor
Rule 46    term -> term multiplyingOperator factor
Rule 47    multiplyingOperator -> MULT
Rule 48    multiplyingOperator -> DIVIDE
Rule 49    factor -> ID
Rule 50    factor -> NUMBER
Rule 51    factor -> ID SLPAREN NUMBER SRPAREN
Rule 52    numberType -> NUMBER
Rule 53    numberType -> INT ID
Rule 54    arrayType -> ARRAY ID
Rule 55    empty -> <empty>

Terminals, with rules where they appear

ARRAY                : 54
ASIGNWORD            : 25
ASSIGN               : 9 33
BALLOON              : 18
COLON                : 18 20 20 22 23 25 25 26 27 27 31
COMMENT              : 
DEC                  : 23
DIVIDE               : 48
DO                   : 25
DOW                  : 19
ELEVATE              : 
ELSE                 : 
END                  : 1 3
ENDDO                : 19
ENDIF                : 21
EQGREATER            : 38
EQLESS               : 37
EQUAL                : 39
FEND                 : 
FLOAT                : 
FOR                  : 24
FORASIGNWORD         : 25
FOREND               : 24
GREATER              : 36
ID                   : 7 49 51 53 54
IF                   : 21
INC                  : 22
INT                  : 13 53
LESS                 : 35
LPAREN               : 14 18 19 20 21 22 23 25 25 26 27 31
MAIN                 : 1 3
MINUS                : 44
MULT                 : 47
NE                   : 34
NUMBER               : 7 11 14 16 50 51 52
OBJECT               : 27
PERCENT              : 
PLUS                 : 43
PROCEDURE            : 
QUOTE                : 
RANDOM               : 20 31
RPAREN               : 14 18 19 20 21 22 23 25 25 26 27 31
SEMICOLON            : 1 3 3 7 18 19 20 21 21 22 23 24 25 26 27 31
SLASH                : 
SLPAREN              : 11 51
SPACE                : 
SRPAREN              : 11 51
STR                  : 
STRING               : 17
TELAARANA            : 26
TEXTO                : 14
TIMES                : 24
USING                : 24
WHILE                : 
error                : 

Nonterminals, with rules where they appear

addingOperator       : 41 42
arrayStruct          : 
arrayType            : 20 24 25
block                : 1 24 29 30
blocklist            : 1
condition            : 21
empty                : 4 6 8 10 12 15 28
expression           : 32 32 42
factor               : 45 46
initiateVar          : 7
multiplyingOperator  : 46
numberType           : 18 18 19 20 20 22 22 23 23 24 25 25 25 26 26 27 27 27 31 31
program              : 0
randomInFor          : 24
relation             : 32
statement            : 2 19 21 29
statementList        : 2 3
statementList1       : 5
statementList2       : 5
term                 : 40 41 42 46
value                : 9
variableDec          : 2 30
variableType         : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . MAIN block END SEMICOLON blocklist

    MAIN            shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> MAIN . block END SEMICOLON blocklist
    (2) block -> . variableDec statement statementList
    (7) variableDec -> . variableType ID NUMBER initiateVar SEMICOLON
    (8) variableDec -> . empty
    (13) variableType -> . INT
    (14) variableType -> . TEXTO LPAREN NUMBER RPAREN
    (15) variableType -> . empty
    (55) empty -> .

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for TEXTO resolved as shift
    INT             shift and go to state 7
    TEXTO           shift and go to state 8
    BALLOON         reduce using rule 55 (empty -> .)
    DOW             reduce using rule 55 (empty -> .)
    RANDOM          reduce using rule 55 (empty -> .)
    IF              reduce using rule 55 (empty -> .)
    INC             reduce using rule 55 (empty -> .)
    DEC             reduce using rule 55 (empty -> .)
    FOR             reduce using rule 55 (empty -> .)
    FORASIGNWORD    reduce using rule 55 (empty -> .)
    TELAARANA       reduce using rule 55 (empty -> .)
    OBJECT          reduce using rule 55 (empty -> .)
    ID              reduce using rule 55 (empty -> .)
    END             reduce using rule 55 (empty -> .)

  ! INT             [ reduce using rule 55 (empty -> .) ]
  ! TEXTO           [ reduce using rule 55 (empty -> .) ]

    block                          shift and go to state 3
    variableDec                    shift and go to state 4
    variableType                   shift and go to state 5
    empty                          shift and go to state 6

state 3

    (1) program -> MAIN block . END SEMICOLON blocklist

    END             shift and go to state 9


state 4

    (2) block -> variableDec . statement statementList
    (18) statement -> . BALLOON LPAREN numberType COLON numberType RPAREN SEMICOLON
    (19) statement -> . DOW LPAREN numberType RPAREN statement ENDDO SEMICOLON
    (20) statement -> . RANDOM LPAREN arrayType COLON numberType COLON numberType RPAREN SEMICOLON
    (21) statement -> . IF LPAREN condition RPAREN SEMICOLON statement ENDIF SEMICOLON
    (22) statement -> . INC LPAREN numberType COLON numberType RPAREN SEMICOLON
    (23) statement -> . DEC LPAREN numberType COLON numberType RPAREN SEMICOLON
    (24) statement -> . FOR numberType TIMES USING arrayType randomInFor block FOREND SEMICOLON
    (25) statement -> . FORASIGNWORD LPAREN numberType COLON numberType RPAREN DO ASIGNWORD LPAREN numberType COLON arrayType RPAREN SEMICOLON
    (26) statement -> . TELAARANA LPAREN numberType COLON numberType RPAREN SEMICOLON
    (27) statement -> . OBJECT LPAREN numberType COLON numberType COLON numberType RPAREN SEMICOLON
    (28) statement -> . empty
    (55) empty -> .

  ! shift/reduce conflict for BALLOON resolved as shift
  ! shift/reduce conflict for DOW resolved as shift
  ! shift/reduce conflict for RANDOM resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for INC resolved as shift
  ! shift/reduce conflict for DEC resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for FORASIGNWORD resolved as shift
  ! shift/reduce conflict for TELAARANA resolved as shift
  ! shift/reduce conflict for OBJECT resolved as shift
    BALLOON         shift and go to state 11
    DOW             shift and go to state 12
    RANDOM          shift and go to state 13
    IF              shift and go to state 14
    INC             shift and go to state 15
    DEC             shift and go to state 16
    FOR             shift and go to state 17
    FORASIGNWORD    shift and go to state 18
    TELAARANA       shift and go to state 19
    OBJECT          shift and go to state 20
    INT             reduce using rule 55 (empty -> .)
    TEXTO           reduce using rule 55 (empty -> .)
    ID              reduce using rule 55 (empty -> .)
    END             reduce using rule 55 (empty -> .)
    FOREND          reduce using rule 55 (empty -> .)

  ! BALLOON         [ reduce using rule 55 (empty -> .) ]
  ! DOW             [ reduce using rule 55 (empty -> .) ]
  ! RANDOM          [ reduce using rule 55 (empty -> .) ]
  ! IF              [ reduce using rule 55 (empty -> .) ]
  ! INC             [ reduce using rule 55 (empty -> .) ]
  ! DEC             [ reduce using rule 55 (empty -> .) ]
  ! FOR             [ reduce using rule 55 (empty -> .) ]
  ! FORASIGNWORD    [ reduce using rule 55 (empty -> .) ]
  ! TELAARANA       [ reduce using rule 55 (empty -> .) ]
  ! OBJECT          [ reduce using rule 55 (empty -> .) ]

    statement                      shift and go to state 10
    empty                          shift and go to state 21

state 5

    (7) variableDec -> variableType . ID NUMBER initiateVar SEMICOLON

    ID              shift and go to state 22


state 6

    (8) variableDec -> empty .
    (15) variableType -> empty .

  ! reduce/reduce conflict for ID resolved using rule 8 (variableDec -> empty .)
    BALLOON         reduce using rule 8 (variableDec -> empty .)
    DOW             reduce using rule 8 (variableDec -> empty .)
    RANDOM          reduce using rule 8 (variableDec -> empty .)
    IF              reduce using rule 8 (variableDec -> empty .)
    INC             reduce using rule 8 (variableDec -> empty .)
    DEC             reduce using rule 8 (variableDec -> empty .)
    FOR             reduce using rule 8 (variableDec -> empty .)
    FORASIGNWORD    reduce using rule 8 (variableDec -> empty .)
    TELAARANA       reduce using rule 8 (variableDec -> empty .)
    OBJECT          reduce using rule 8 (variableDec -> empty .)
    INT             reduce using rule 8 (variableDec -> empty .)
    TEXTO           reduce using rule 8 (variableDec -> empty .)
    ID              reduce using rule 8 (variableDec -> empty .)
    END             reduce using rule 8 (variableDec -> empty .)
    FOREND          reduce using rule 8 (variableDec -> empty .)

  ! ID              [ reduce using rule 15 (variableType -> empty .) ]


state 7

    (13) variableType -> INT .

    ID              reduce using rule 13 (variableType -> INT .)


state 8

    (14) variableType -> TEXTO . LPAREN NUMBER RPAREN

    LPAREN          shift and go to state 23


state 9

    (1) program -> MAIN block END . SEMICOLON blocklist

    SEMICOLON       shift and go to state 24


state 10

    (2) block -> variableDec statement . statementList
    (5) statementList -> . statementList1 statementList2
    (6) statementList -> . empty
    (29) statementList1 -> . block statement
    (55) empty -> .
    (2) block -> . variableDec statement statementList
    (7) variableDec -> . variableType ID NUMBER initiateVar SEMICOLON
    (8) variableDec -> . empty
    (13) variableType -> . INT
    (14) variableType -> . TEXTO LPAREN NUMBER RPAREN
    (15) variableType -> . empty

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for TEXTO resolved as shift
    BALLOON         reduce using rule 55 (empty -> .)
    DOW             reduce using rule 55 (empty -> .)
    RANDOM          reduce using rule 55 (empty -> .)
    IF              reduce using rule 55 (empty -> .)
    INC             reduce using rule 55 (empty -> .)
    DEC             reduce using rule 55 (empty -> .)
    FOR             reduce using rule 55 (empty -> .)
    FORASIGNWORD    reduce using rule 55 (empty -> .)
    TELAARANA       reduce using rule 55 (empty -> .)
    OBJECT          reduce using rule 55 (empty -> .)
    ID              reduce using rule 55 (empty -> .)
    END             reduce using rule 55 (empty -> .)
    FOREND          reduce using rule 55 (empty -> .)
    INT             shift and go to state 7
    TEXTO           shift and go to state 8

  ! INT             [ reduce using rule 55 (empty -> .) ]
  ! TEXTO           [ reduce using rule 55 (empty -> .) ]

    variableDec                    shift and go to state 4
    statementList                  shift and go to state 25
    statementList1                 shift and go to state 26
    empty                          shift and go to state 27
    block                          shift and go to state 28
    variableType                   shift and go to state 5

state 11

    (18) statement -> BALLOON . LPAREN numberType COLON numberType RPAREN SEMICOLON

    LPAREN          shift and go to state 29


state 12

    (19) statement -> DOW . LPAREN numberType RPAREN statement ENDDO SEMICOLON

    LPAREN          shift and go to state 30


state 13

    (20) statement -> RANDOM . LPAREN arrayType COLON numberType COLON numberType RPAREN SEMICOLON

    LPAREN          shift and go to state 31


state 14

    (21) statement -> IF . LPAREN condition RPAREN SEMICOLON statement ENDIF SEMICOLON

    LPAREN          shift and go to state 32


state 15

    (22) statement -> INC . LPAREN numberType COLON numberType RPAREN SEMICOLON

    LPAREN          shift and go to state 33


state 16

    (23) statement -> DEC . LPAREN numberType COLON numberType RPAREN SEMICOLON

    LPAREN          shift and go to state 34


state 17

    (24) statement -> FOR . numberType TIMES USING arrayType randomInFor block FOREND SEMICOLON
    (52) numberType -> . NUMBER
    (53) numberType -> . INT ID

    NUMBER          shift and go to state 36
    INT             shift and go to state 37

    numberType                     shift and go to state 35

state 18

    (25) statement -> FORASIGNWORD . LPAREN numberType COLON numberType RPAREN DO ASIGNWORD LPAREN numberType COLON arrayType RPAREN SEMICOLON

    LPAREN          shift and go to state 38


state 19

    (26) statement -> TELAARANA . LPAREN numberType COLON numberType RPAREN SEMICOLON

    LPAREN          shift and go to state 39


state 20

    (27) statement -> OBJECT . LPAREN numberType COLON numberType COLON numberType RPAREN SEMICOLON

    LPAREN          shift and go to state 40


state 21

    (28) statement -> empty .

    INT             reduce using rule 28 (statement -> empty .)
    TEXTO           reduce using rule 28 (statement -> empty .)
    ID              reduce using rule 28 (statement -> empty .)
    BALLOON         reduce using rule 28 (statement -> empty .)
    DOW             reduce using rule 28 (statement -> empty .)
    RANDOM          reduce using rule 28 (statement -> empty .)
    IF              reduce using rule 28 (statement -> empty .)
    INC             reduce using rule 28 (statement -> empty .)
    DEC             reduce using rule 28 (statement -> empty .)
    FOR             reduce using rule 28 (statement -> empty .)
    FORASIGNWORD    reduce using rule 28 (statement -> empty .)
    TELAARANA       reduce using rule 28 (statement -> empty .)
    OBJECT          reduce using rule 28 (statement -> empty .)
    END             reduce using rule 28 (statement -> empty .)
    FOREND          reduce using rule 28 (statement -> empty .)
    ENDDO           reduce using rule 28 (statement -> empty .)
    ENDIF           reduce using rule 28 (statement -> empty .)


state 22

    (7) variableDec -> variableType ID . NUMBER initiateVar SEMICOLON

    NUMBER          shift and go to state 41


state 23

    (14) variableType -> TEXTO LPAREN . NUMBER RPAREN

    NUMBER          shift and go to state 42


state 24

    (1) program -> MAIN block END SEMICOLON . blocklist
    (3) blocklist -> . MAIN SEMICOLON statementList END SEMICOLON
    (4) blocklist -> . empty
    (55) empty -> .

    MAIN            shift and go to state 43
    $end            reduce using rule 55 (empty -> .)

    blocklist                      shift and go to state 44
    empty                          shift and go to state 45

state 25

    (2) block -> variableDec statement statementList .

    END             reduce using rule 2 (block -> variableDec statement statementList .)
    BALLOON         reduce using rule 2 (block -> variableDec statement statementList .)
    DOW             reduce using rule 2 (block -> variableDec statement statementList .)
    RANDOM          reduce using rule 2 (block -> variableDec statement statementList .)
    IF              reduce using rule 2 (block -> variableDec statement statementList .)
    INC             reduce using rule 2 (block -> variableDec statement statementList .)
    DEC             reduce using rule 2 (block -> variableDec statement statementList .)
    FOR             reduce using rule 2 (block -> variableDec statement statementList .)
    FORASIGNWORD    reduce using rule 2 (block -> variableDec statement statementList .)
    TELAARANA       reduce using rule 2 (block -> variableDec statement statementList .)
    OBJECT          reduce using rule 2 (block -> variableDec statement statementList .)
    INT             reduce using rule 2 (block -> variableDec statement statementList .)
    TEXTO           reduce using rule 2 (block -> variableDec statement statementList .)
    ID              reduce using rule 2 (block -> variableDec statement statementList .)
    FOREND          reduce using rule 2 (block -> variableDec statement statementList .)


state 26

    (5) statementList -> statementList1 . statementList2
    (30) statementList2 -> . block variableDec
    (2) block -> . variableDec statement statementList
    (7) variableDec -> . variableType ID NUMBER initiateVar SEMICOLON
    (8) variableDec -> . empty
    (13) variableType -> . INT
    (14) variableType -> . TEXTO LPAREN NUMBER RPAREN
    (15) variableType -> . empty
    (55) empty -> .

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for TEXTO resolved as shift
    INT             shift and go to state 7
    TEXTO           shift and go to state 8
    ID              reduce using rule 55 (empty -> .)
    BALLOON         reduce using rule 55 (empty -> .)
    DOW             reduce using rule 55 (empty -> .)
    RANDOM          reduce using rule 55 (empty -> .)
    IF              reduce using rule 55 (empty -> .)
    INC             reduce using rule 55 (empty -> .)
    DEC             reduce using rule 55 (empty -> .)
    FOR             reduce using rule 55 (empty -> .)
    FORASIGNWORD    reduce using rule 55 (empty -> .)
    TELAARANA       reduce using rule 55 (empty -> .)
    OBJECT          reduce using rule 55 (empty -> .)
    END             reduce using rule 55 (empty -> .)
    FOREND          reduce using rule 55 (empty -> .)

  ! INT             [ reduce using rule 55 (empty -> .) ]
  ! TEXTO           [ reduce using rule 55 (empty -> .) ]

    statementList2                 shift and go to state 46
    block                          shift and go to state 47
    variableDec                    shift and go to state 4
    variableType                   shift and go to state 5
    empty                          shift and go to state 6

state 27

    (6) statementList -> empty .
    (8) variableDec -> empty .
    (15) variableType -> empty .

  ! reduce/reduce conflict for INT resolved using rule 6 (statementList -> empty .)
  ! reduce/reduce conflict for TEXTO resolved using rule 6 (statementList -> empty .)
  ! reduce/reduce conflict for ID resolved using rule 6 (statementList -> empty .)
  ! reduce/reduce conflict for BALLOON resolved using rule 6 (statementList -> empty .)
  ! reduce/reduce conflict for DOW resolved using rule 6 (statementList -> empty .)
  ! reduce/reduce conflict for RANDOM resolved using rule 6 (statementList -> empty .)
  ! reduce/reduce conflict for IF resolved using rule 6 (statementList -> empty .)
  ! reduce/reduce conflict for INC resolved using rule 6 (statementList -> empty .)
  ! reduce/reduce conflict for DEC resolved using rule 6 (statementList -> empty .)
  ! reduce/reduce conflict for FOR resolved using rule 6 (statementList -> empty .)
  ! reduce/reduce conflict for FORASIGNWORD resolved using rule 6 (statementList -> empty .)
  ! reduce/reduce conflict for TELAARANA resolved using rule 6 (statementList -> empty .)
  ! reduce/reduce conflict for OBJECT resolved using rule 6 (statementList -> empty .)
  ! reduce/reduce conflict for END resolved using rule 6 (statementList -> empty .)
  ! reduce/reduce conflict for FOREND resolved using rule 6 (statementList -> empty .)
  ! reduce/reduce conflict for ID resolved using rule 6 (statementList -> empty .)
    BALLOON         reduce using rule 6 (statementList -> empty .)
    DOW             reduce using rule 6 (statementList -> empty .)
    RANDOM          reduce using rule 6 (statementList -> empty .)
    IF              reduce using rule 6 (statementList -> empty .)
    INC             reduce using rule 6 (statementList -> empty .)
    DEC             reduce using rule 6 (statementList -> empty .)
    FOR             reduce using rule 6 (statementList -> empty .)
    FORASIGNWORD    reduce using rule 6 (statementList -> empty .)
    TELAARANA       reduce using rule 6 (statementList -> empty .)
    OBJECT          reduce using rule 6 (statementList -> empty .)
    INT             reduce using rule 6 (statementList -> empty .)
    TEXTO           reduce using rule 6 (statementList -> empty .)
    ID              reduce using rule 6 (statementList -> empty .)
    END             reduce using rule 6 (statementList -> empty .)
    FOREND          reduce using rule 6 (statementList -> empty .)
